--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Jenkins + GitHub + Docker</title>
+  <title>My First CI/CD Website</title>
 </head>
 <body>
-    <h1>Hello from Jenkins + GitHub + Docker! by Anvesh Shetty</h1>
+  <h1>Hello from Docker + Jenkins!</h1>
 </body>
 </html>
 
