--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My First CI/CD Website</title>
+  <title>My First CI/CD Website Using jenkins :)</title>
 </head>
 <body>
   <h1>Hello from Docker + Jenkins!</h1>
